--- a/SignallingSimulator/mapEditor.ui
+++ b/SignallingSimulator/mapEditor.ui
@@ -158,10 +158,10 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit"/>
+            <widget class="QLineEdit" name="waypointText"/>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton">
+            <widget class="QPushButton" name="waypointButton">
              <property name="text">
               <string>Set</string>
              </property>
@@ -179,10 +179,10 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_2"/>
+            <widget class="QLineEdit" name="distanceText"/>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton_3">
+            <widget class="QPushButton" name="distanceButton">
              <property name="text">
               <string>Set</string>
              </property>
@@ -200,7 +200,7 @@
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit_3"/>
+          <widget class="QLineEdit" name="nameBox"/>
          </item>
          <item row="3" column="0">
           <widget class="QLabel" name="label_5">
@@ -224,13 +224,13 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QSpinBox" name="spinBox"/>
+          <widget class="QSpinBox" name="widthBox"/>
          </item>
          <item row="3" column="1">
-          <widget class="QSpinBox" name="spinBox_2"/>
+          <widget class="QSpinBox" name="hightBox"/>
          </item>
          <item row="4" column="1">
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="updateSizeButton">
            <property name="text">
             <string>Update</string>
            </property>
