--- a/SignallingSimulator/timetableEditor.ui
+++ b/SignallingSimulator/timetableEditor.ui
@@ -30,10 +30,10 @@
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="2" column="2">
-         <widget class="QLineEdit" name="lineEdit_3"/>
+         <widget class="QLineEdit" name="startTimeText"/>
         </item>
         <item row="0" column="2">
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="mapNameText"/>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
@@ -43,10 +43,10 @@
          </widget>
         </item>
         <item row="1" column="2">
-         <widget class="QLineEdit" name="lineEdit_2"/>
+         <widget class="QLineEdit" name="infoFileText"/>
         </item>
         <item row="3" column="2">
-         <widget class="QLineEdit" name="lineEdit_4"/>
+         <widget class="QLineEdit" name="endTimeText"/>
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="label_4">
@@ -222,18 +222,8 @@
         <string>Train Attributes</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_8">
-          <property name="text">
-           <string>Load Time</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLineEdit" name="lineEdit_5"/>
-        </item>
         <item row="3" column="1" rowspan="3">
-         <widget class="QLineEdit" name="lineEdit_8"/>
+         <widget class="QLineEdit" name="loatTimeText"/>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_5">
@@ -242,10 +232,37 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1" rowspan="2">
-         <widget class="QLineEdit" name="lineEdit_7"/>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Destination</string>
+          </property>
+         </widget>
         </item>
-        <item row="7" column="0">
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_8">
+          <property name="text">
+           <string>Load Time</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1" rowspan="2">
+         <widget class="QLineEdit" name="destinationText"/>
+        </item>
+        <item row="6" column="1">
+         <widget class="QLineEdit" name="maxSpeedText"/>
+        </item>
+        <item row="5" column="0" rowspan="2">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Max Speed</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="headcodeText"/>
+        </item>
+        <item row="8" column="0">
          <spacer name="verticalSpacer_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -258,20 +275,10 @@
           </property>
          </spacer>
         </item>
-        <item row="6" column="1">
-         <widget class="QLineEdit" name="lineEdit_6"/>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_7">
+        <item row="7" column="0" colspan="2">
+         <widget class="QPushButton" name="trainAttributeUpdateButton">
           <property name="text">
-           <string>Destination</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0" rowspan="2">
-         <widget class="QLabel" name="label_6">
-          <property name="text">
-           <string>Max Speed</string>
+           <string>Update</string>
           </property>
          </widget>
         </item>
